Bug 40234 - Weborder - scroll bar is not fully visible for product modifiers

--- a/skins/weborder/css/myorder.css
+++ b/skins/weborder/css/myorder.css
@@ -22,6 +22,7 @@
     margin: 5px 13px 5px 8px;
     padding-left: 5px;
     height: 100%;
+    -ms-overflow-style: none;
 }
 #modifiers_popup .modifiers_table_scroll::-webkit-scrollbar {
     width: 0 !important;
